--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
   "homepage": "https://github.com/jakelw96/food-festivel#readme",
   "devDependencies": {
     "file-loader": "^6.2.0",
+    "image-webpack-loader": "^7.0.1",
     "webpack": "^5.44.0",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "webpack-pwa-manifest": "^4.3.0"
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "image-webpack-loader": "^7.0.1",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.0"
   }
